<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hack the North</string>

    <!-- ActionBar Item Names -->
    <string name="action_settings">Settings</string>

    <!-- Activity Titles -->
    <string name="settings_activity">Settings</string>

    <!--Titles for information to go on cards-->
    <string name="organization">Organization</string>
    <string name="availability">Availability</string>
    <string name="skills">Skills</string>
    <string name="prizes">Prizes</string>

    <!--Fragment titles-->
    <string-array name="fragment_titles">
        <item>UPDATES</item>
        <item>SCHEDULE</item>
        <item>PRIZES</item>
        <item>MENTORS</item>
        <item>TEAM</item>
    </string-array>

    <!-- Settings categories -->
    <string name="setting_category_notifications">Notifications</string>

    <!-- Settings titles -->
    <string name="setting_notifications">Notifications</string>
    <string name="setting_notification_sound">Sound</string>
    <string name="setting_notification_vibrate">Vibrate</string>
    <string name="send_email_to_prize_contact">Send Email To Prize Contact:</string>

    <!-- Settings summaries -->
    <string name="setting_notifications_summary">Notify me when there\'s new updates</string>
    <string name="setting_notification_sound_summary">Select a notification tone</string>
    <string name="setting_notification_vibrate_summary">Enable vibration for new notifications</string>

    <string name="calendar_dialog_title">Add Event to Calendar?</string>
    <string name="calendar_dialog_message">Would you like to add the \"%s\" schedule item to your calendar?</string>
    <string name="dialog_button_yes">YES</string>
    <string name="dialog_button_cancel">CANCEL</string>

</resources>
